CB-31546 FMS image change flow is missing stack status update
- added status update
- added notification event for first and final steps
- added StackUpdater and EventSenderService to the parent class